<!--
   - Copyright (c) Microsoft. All rights reserved. Licensed under the MIT license.
   - See LICENSE in the project root for license information.
  -->
<!DOCTYPE resources [
    <!ENTITY clientId "90d68c23-8756-4e3b-b8ff-d29dff5630b9">
    ]>
<resources>


    <!-- Regular UI text -->
    <string name="app_name">Connect sample</string>
    <string name="app_name_short">Connect</string>
    <string name="connect_button_text">Connect to Microsoft Graph</string>
    <string name="send_mail_button_text">Send e-mail</string>
    <string name="disconnect_menu_item_text">Disconnect</string>
    <string name="title_text">Hi\u00A0</string>
    <string name="description_text">\nYou\'re now connected to Microsoft Graph. Tap the button below to send a message from your account using the Microsoft Graph API.\n</string>
    <string name="conclusion_text">\nCheck your inbox. You have a new message :)</string>

    <!-- Toast successful messages -->
    <string name="send_mail_toast_text">Mail sent</string>

    <string name="client_Id">&clientId;</string>
    <string name="msalPrefix">msal&clientId;</string>
    <!-- TextView Error messages -->
    <string name="title_text_error">Oops!</string>
    <string name="connect_text_error">\nSorry, can\'t connect to Microsoft Graph.\nHint: Check logcat for details.</string>
    <string name="send_mail_text_error">\nSorry, can\'t send the email.\nHint: Check logcat for details.</string>

    <!-- Toast error messages -->
    <string name="connect_toast_text_error">Error connecting to Microsoft Graph\nCheck logcat for details</string>
    <string name="send_mail_toast_text_error">Error sending email\nCheck logcat for details</string>
    <string name="warning_client_id_redirect_uri_incorrect">The client ID or redirect URI is not valid. Enter a valid client ID and redirect URI in the Constants.java file and run again</string>

    <!-- Email text -->
    <string name="mail_subject_text">Welcome to Microsoft Graph development on Android with the Connect sample</string>

    <string name="mail_body_text2" formatted="false">&lt;html&gt;&lt;head&gt;
&lt;meta http-equiv=\'Content-Type\' content=\'text/html; charset=us-ascii\'&gt;
&lt;title&gt;&lt;/title&gt;
&lt;/head&gt;
&lt;body style=\'font-family:calibri\'&gt;
&lt;h2&gt;Congratulations!&lt;/h2&gt;
&lt;p&gt;This is a message from the Microsoft Graph Connect Sample. You are well on your way to incorporating Microsoft Graph endpoints in your apps.&lt;/p&gt;&lt;a href=%s&gt;See the photo you just uploaded!&lt;/a&gt;
&lt;h3&gt;What\'s next?&lt;/h3&gt;&lt;ul&gt;
&lt;li&gt;Check out &lt;a href=\'https://developer.microsoft.com/graph\'&gt;developer.microsoft.com/graph&lt;/a&gt; to start building Microsoft Graph apps today with all the latest tools, templates, and guidance to get started quickly.&lt;/li&gt;
&lt;li&gt;Use the &lt;a href=\'https://developer.microsoft.com/graph/graph-explorer\'&gt;Graph Explorer&lt;/a&gt; to explore the rest of the APIs and start your testing.&lt;/li&gt;
&lt;li&gt;Browse other &lt;a href=\'https://github.com/search?p=5&amp;q=org%3Amicrosoftgraph+sample&amp;type=Repositories&amp;utf8=%E2%9C%93\'&gt;samples on GitHub&lt;/a&gt; to see more of the APIs in action.&lt;/li&gt;
&lt;/ul&gt;
&lt;h3&gt;Give us feedback&lt;/h3&gt;
&lt;p&gt;If you have any trouble running this sample, please &lt;a href=\'https://github.com/microsoftgraph/uwp-csharp-connect-sample/issues\'&gt;
log an issue&lt;/a&gt; on our repository.&lt;/p&gt;&lt;p&gt;For general questions about the Microsoft Graph API, post to &lt;a href=\'https://stackoverflow.com/questions/tagged/microsoftgraph\'&gt;Stack Overflow&lt;/a&gt;. Make sure that your questions or comments are tagged with [microsoftgraph].&lt;/p&gt;
&lt;p&gt;Thanks, and happy coding!&lt;br&gt;
&amp;nbsp;&amp;nbsp;&amp;nbsp;&amp;nbsp;Your Microsoft Graph samples development team &lt;/p&gt;
&lt;div style=\'text-align:center; font-family:calibri\'&gt;
&lt;table style=\'width:100%; font-family:calibri\'&gt;
&lt;tbody&gt;
&lt;tr&gt;
&lt;td&gt;&lt;a href=\'https://github.com/microsoftgraph/uwp-csharp-connect-sample\'&gt;See on GitHub&lt;/a&gt;
&lt;/td&gt;
&lt;td&gt;&lt;a href=\'https://office365.uservoice.com\'&gt;Suggest on UserVoice&lt;/a&gt;
&lt;/td&gt;
&lt;td&gt;&lt;a href=\'https://twitter.com/share?text=I%20just%20started%20developing%20apps%20for%20%23ASP.NET%20using%20the%20%23MicrosoftGraph%20Connect%20app%20%40OfficeDev&amp;amp;url=https://github.com/microsoftgraph/uwp-csharp-connect-sample\'&gt;Share on Twitter&lt;/a&gt;
&lt;/td&gt;
&lt;/tr&gt;
&lt;/tbody&gt;
&lt;/table&gt;
&lt;/div&gt;
&lt;/body&gt;
&lt;/html&gt;</string>
    <string name="mail_body_text_NoAttach" formatted="false">&lt;html&gt;&lt;head&gt;
&lt;meta http-equiv=\'Content-Type\' content=\'text/html; charset=us-ascii\'&gt;
&lt;title&gt;&lt;/title&gt;
&lt;/head&gt;
&lt;body style=\'font-family:calibri\'&gt;
&lt;h2&gt;Congratulations!&lt;/h2&gt;
&lt;p&gt;This is a message from the Microsoft Graph Connect Sample. You are well on your way to incorporating Microsoft Graph endpoints in your apps.&lt;/p&gt;
&lt;h3&gt;What\'s next?&lt;/h3&gt;&lt;ul&gt;
&lt;li&gt;Check out &lt;a href=\'https://developer.microsoft.com/graph\'&gt;developer.microsoft.com/graph&lt;/a&gt; to start building Microsoft Graph apps today with all the latest tools, templates, and guidance to get started quickly.&lt;/li&gt;
&lt;li&gt;Use the &lt;a href=\'https://developer.microsoft.com/graph/graph-explorer\'&gt;Graph Explorer&lt;/a&gt; to explore the rest of the APIs and start your testing.&lt;/li&gt;
&lt;li&gt;Browse other &lt;a href=\'https://github.com/search?p=5&amp;q=org%3Amicrosoftgraph+sample&amp;type=Repositories&amp;utf8=%E2%9C%93\'&gt;samples on GitHub&lt;/a&gt; to see more of the APIs in action.&lt;/li&gt;
&lt;/ul&gt;
&lt;h3&gt;Give us feedback&lt;/h3&gt;
&lt;p&gt;If you have any trouble running this sample, please &lt;a href=\'https://github.com/microsoftgraph/uwp-csharp-connect-sample/issues\'&gt;
log an issue&lt;/a&gt; on our repository.&lt;/p&gt;&lt;p&gt;For general questions about the Microsoft Graph API, post to &lt;a href=\'https://stackoverflow.com/questions/tagged/microsoftgraph\'&gt;Stack Overflow&lt;/a&gt;. Make sure that your questions or comments are tagged with [microsoftgraph].&lt;/p&gt;
&lt;p&gt;Thanks, and happy coding!&lt;br&gt;
&amp;nbsp;&amp;nbsp;&amp;nbsp;&amp;nbsp;Your Microsoft Graph samples development team &lt;/p&gt;
&lt;div style=\'text-align:center; font-family:calibri\'&gt;
&lt;table style=\'width:100%; font-family:calibri\'&gt;
&lt;tbody&gt;
&lt;tr&gt;
&lt;td&gt;&lt;a href=\'https://github.com/microsoftgraph/uwp-csharp-connect-sample\'&gt;See on GitHub&lt;/a&gt;
&lt;/td&gt;
&lt;td&gt;&lt;a href=\'https://office365.uservoice.com\'&gt;Suggest on UserVoice&lt;/a&gt;
&lt;/td&gt;
&lt;td&gt;&lt;a href=\'https://twitter.com/share?text=I%20just%20started%20developing%20apps%20for%20%23ASP.NET%20using%20the%20%23MicrosoftGraph%20Connect%20app%20%40OfficeDev&amp;amp;url=https://github.com/microsoftgraph/uwp-csharp-connect-sample\'&gt;Share on Twitter&lt;/a&gt;
&lt;/td&gt;
&lt;/tr&gt;
&lt;/tbody&gt;
&lt;/table&gt;
&lt;/div&gt;
&lt;/body&gt;
&lt;/html&gt;</string>
    <string name="defaultImageFileName">test.jpg</string>
</resources>
